# Resume-Matcher

./: BUG_FIXES_SUMMARY.md  package.json
apps/backend/: pyproject.toml
apps/backend/app/: base.py
apps/backend/app/api/router/v1/: __init__.py  analytics.py  goals.py  insights.py  journal.py
apps/backend/app/core/: config.py
apps/backend/app/models/: __init__.py  goal.py  insight.py  journal_entry.py  mood_entry.py  user.py
apps/backend/app/schemas/pydantic/: __init__.py  goal.py  insight.py  journal_entry.py  mood_entry.py  user.py
apps/backend/app/services/: __init__.py  ai_analysis_service.py  journal_service.py
apps/frontend/: eslint.config.mjs  package-lock.json  package.json
apps/frontend/app/: layout.tsx
apps/frontend/app/(default)/: page.tsx
apps/frontend/components/home/: hero.tsx
apps/frontend/components/journal/: analytics-dashboard.tsx  goals-panel.tsx  insights-panel.tsx  journal-app.tsx  journal-editor.tsx  journal-entries.tsx
apps/frontend/hooks/: use-file-upload.ts  use-toast.ts
